Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt Creator
QTCREATORBUG-2084
Windows: gdb crashes while attaching to running process
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P1: Critical
Fix Version/s:
None
Affects Version/s:
Qt Creator 2.0.1
Component/s:
Debugger
Labels:
rc201
Environment:
Windows Vista x64
Qt from 4.7.0 branch
g++ (GCC) 4.4.0
GNU gdb (GDB) 7.1.0.20100329-cvs
Commits:
4b1540e5a730e2e4f0e9c9c8203045fd1f59dca5
Description
Steps to reproduce:
Create & launch MinGW built application
Disable CDB in settings page
Attach to running process
This works fine with 2.0.0
Attachments
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
200commands.log
0.7 kB
18 Aug '10 12:40
200debugger.log
19 kB
18 Aug '10 12:40
commands.log
0.7 kB
18 Aug '10 12:40
debugger.log
15 kB
17 Aug '10 21:35
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Friedemann Kleint
Reporter:
Robert Löhning
Votes:
0
Vote for this issue
Watchers:
0
Start watching this issue
Dates
Created:
17 Aug '10 21:35
Updated:
26 Aug '13 15:22
Resolved:
18 Aug '10 16:43
Gerrit Reviews
There are no open Gerrit changes