Debugger/Windows[gdb]: Fix Attach to running (gui) process.

Initial-patch-by: hjk
Task-number: QTCREATORBUG-2084